# hand2sim

./: .gitignore  README.md  environment.yml  franka_allegro.py  hand2sim.py  hoi4d.py  isaac_franka.py  pyproject.toml  real2sim.py  something_something.py  utils.py
datasets/: base_dataset.py  generic.py  hoi4d.py  something_something.py
debug/: README.md  franka_allegro.py  manual_tests.sh  test_hand_pose.py  test_hoi4d.sh
environments/: isaacsim_env.py  robohive_env.py
scripts/: hoi4d_inference.py
