[project]
name = "real2sim"
version = "0.1.0"
description = "Real2Sim"
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [{ email = "sskrishn@cs.cmu.edu", name = "Sriram Krishna" }]
dependencies = ["dex-retargeting>=0.4.6,<0.5", "ipdb>=0.13.13,<0.14"]

[project.optional-dependencies]
develop = [
    "black==24.10.0",
    "isort==5.13.2",
    "pylint==3.3.2",
    "mypy-extensions==1.0.0",
]

[build-system]
requires = ["setuptools", "setuptools-scm", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

# Pixi-specific configuration
[tool.pixi.project]
channels = ["conda-forge"]
platforms = ["linux-64"]

# Conda dependencies
[tool.pixi.dependencies]
python = "3.10.*"
gcc = "12.4.*"
gxx = "12.4.*"
binutils_impl_linux-64 = "2.40.*"
bzip2 = "1.0.8.*"
ca-certificates = "*"
libgcc-ng = "*"
libgomp = "*"
libstdcxx-ng = "*"
libuuid = "*"
ncurses = "6.4.*"
openssl = "3.4.*"
pip = ">=25.1.1,<26"
readline = "8.2.*"
setuptools = "*"
sqlite = "3.45.*"
tk = "8.6.*"
wheel = "*"
zlib = "1.2.*"
mesalib = ">=24.0.7,<25"

# PyPI-specific dependencies
[tool.pixi.pypi-dependencies]
absl-py = "==2.1.0"
addict = "==2.4.0"
astroid = "==3.3.6"
asttokens = "==3.0.0"
attrs = "==24.3.0"
black = "==24.10.0"
blinker = "==1.9.0"
boto3 = "==1.35.82"
botocore = "==1.35.82"
certifi = "==2024.12.14"
charset-normalizer = "==3.4.0"
click = "==8.1.7"
cloudpickle = "==3.1.0"
comm = "==0.2.2"
configargparse = "==1.7"
contourpy = "==1.3.1"
cycler = "==0.12.1"
dash = "==2.18.2"
dash-core-components = "==2.0.0"
dash-html-components = "==2.0.0"
dash-table = "==5.0.0"
decorator = "==5.1.1"
dill = "==0.3.9"
dm-control = "==1.0.16"
dm-env = "==1.6"
dm-tree = "==0.1.8"
etils = "==1.11.0"
exceptiongroup = "==1.2.2"
executing = "==2.1.0"
farama-notifications = "==0.0.4"
fastjsonschema = "==2.21.1"
ffmpeg = "==1.4"
filelock = "==3.16.1"
flask = "==3.0.3"
flatten-dict = "==0.4.2"
fonttools = "==4.55.3"
fsspec = "==2024.10.0"
gitdb = "==4.0.11"
gitpython = "==3.1.43"
glfw = "==2.8.0"
gymnasium = "==0.29.1"
h5py = "==3.7.0"
idna = "==3.10"
imageio = "==2.36.1"
imageio-ffmpeg = "==0.5.1"
importlib-metadata = "==8.5.0"
importlib-resources = "==6.4.5"
ipython = "==8.30.0"
ipywidgets = "==8.1.5"
isaacsim = "==4.2.0.2"
isaacsim-app = "==4.2.0.2"
isaacsim-asset = "==4.2.0.2"
isaacsim-benchmark = "==4.2.0.2"
isaacsim-code-editor = "==4.2.0.2"
isaacsim-core = "==4.2.0.2"
isaacsim-cortex = "==4.2.0.2"
isaacsim-example = "==4.2.0.2"
isaacsim-extscache-kit = "==4.2.0.2"
isaacsim-extscache-kit-sdk = "==4.2.0.2"
isaacsim-extscache-physics = "==4.2.0.2"
isaacsim-gui = "==4.2.0.2"
isaacsim-kernel = "==4.2.0.2"
isaacsim-replicator = "==4.2.0.2"
isaacsim-rl = "==4.2.0.2"
isaacsim-robot = "==4.2.0.2"
isaacsim-robot-motion = "==4.2.0.2"
isaacsim-robot-setup = "==4.2.0.2"
isaacsim-ros1 = "==4.2.0.2"
isaacsim-ros2 = "==4.2.0.2"
isaacsim-sensor = "==4.2.0.2"
isaacsim-storage = "==4.2.0.2"
isaacsim-template = "==4.2.0.2"
isaacsim-test = "==4.2.0.2"
isaacsim-utils = "==4.2.0.2"
isort = "==5.13.2"
itsdangerous = "==2.2.0"
jedi = "==0.19.2"
jinja2 = "==3.1.4"
jmespath = "==1.0.1"
joblib = "==1.4.2"
jsonschema = "==4.23.0"
jsonschema-specifications = "==2024.10.1"
jupyter-core = "==5.7.2"
jupyterlab-widgets = "==3.0.13"
kiwisolver = "==1.4.7"
labmaze = "==1.0.6"
lxml = "==5.3.0"
markupsafe = "==3.0.2"
matplotlib = "==3.10.0"
matplotlib-inline = "==0.1.7"
mccabe = "==0.7.0"
mpmath = "==1.3.0"
mujoco = "==3.1.3"
mypy-extensions = "==1.0.0"
nbformat = "==5.10.4"
nest-asyncio = "==1.6.0"
networkx = "==3.4.2"
numpy = "==1.26.0"
nvidia-cublas-cu12 = "==12.4.5.8"
nvidia-cuda-cupti-cu12 = "==12.4.127"
nvidia-cuda-nvrtc-cu12 = "==12.4.127"
nvidia-cuda-runtime-cu12 = "==12.4.127"
nvidia-cudnn-cu12 = "==9.1.0.70"
nvidia-cufft-cu12 = "==11.2.1.3"
nvidia-curand-cu12 = "==10.3.5.147"
nvidia-cusolver-cu12 = "==11.6.1.9"
nvidia-cusparse-cu12 = "==12.3.1.170"
nvidia-nccl-cu12 = "==2.21.5"
nvidia-nvjitlink-cu12 = "==12.4.127"
nvidia-nvtx-cu12 = "==12.4.127"
omniverse-kit = "==106.1.0.140981"
open3d = "==0.18.0"
opencv-python = "==4.10.0.84"
osqp = "==0.6.7.post3"
packaging = "==24.2"
pandas = "==2.2.3"
parso = "==0.8.4"
pathspec = "==0.12.1"
pexpect = "==4.9.0"
pillow = "==11.0.0"
pink-noise-rl = "==2.0.1"
platformdirs = "==4.3.6"
plotly = "==5.24.1"
prompt-toolkit = "==3.0.48"
protobuf = "==5.29.1"
psutil = "==6.1.0"
ptyprocess = "==0.7.0"
pure-eval = "==0.2.3"
pygments = "==2.18.0"
pylint = "==3.3.2"
pyopengl = "==3.1.7"
pyparsing = "==3.2.0"
pyperclip = "==1.9.0"
pyquaternion = "==0.9.9"
python-dateutil = "==2.9.0.post0"
pytz = "==2024.2"
pyyaml = "==6.0.2"
qdldl = "==0.1.7.post4"
referencing = "==0.35.1"
requests = "==2.32.3"
retrying = "==1.3.4"
robohive = "==0.7.0"
rpds-py = "==0.22.3"
s3transfer = "==0.10.4"
scikit-learn = "==1.6.0"
scipy = "==1.14.1"
six = "==1.17.0"
sk-video = "==1.1.10"
smmap = "==5.0.1"
stack-data = "==0.6.3"
sympy = "==1.13.1"
tenacity = "==9.0.0"
termcolor = "==2.5.0"
threadpoolctl = "==3.5.0"
tomli = "==2.2.1"
tomlkit = "==0.13.2"
torch = "==2.5.1"
tqdm = "==4.67.1"
traitlets = "==5.14.3"
triton = "==3.1.0"
typing-extensions = "==4.12.2"
tzdata = "==2024.2"
urllib3 = "==2.2.3"
wcwidth = "==0.2.13"
werkzeug = "==3.0.6"
widgetsnbextension = "==4.0.13"
zipp = "==3.21.0"

# Installation tasks
[tool.pixi.tasks]
install-mano = "pip install git+https://github.com/hassony2/chumpy.git git+https://github.com/hassony2/manopth.git"

# Environments
[tool.pixi.environments]
default = { features = ["develop"], solve-group = "default"}

[tool.ruff]
target-version = "py310"
line-length = 88
select = ["E", "F", "I", "W", "N", "UP", "B", "A", "C4", "PL"]
ignore = []
fixable = ["A", "B", "C", "E", "F", "I", "N", "Q", "W", "UP", "PL"]
unfixable = []
exclude = [
    ".git",
    ".eggs",
    ".mypy_cache",
    ".ruff_cache",
    ".venv",
    "__pycache__",
    "build",
    "dist",
]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]

[tool.ruff.isort]
known-third-party = ["torch", "numpy", "mujoco", "dm_control"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
